issue with changing time dial solved and typecontent text-align set to center

--- a/src/components/Typemonk/css/TypeContent.module.css
+++ b/src/components/Typemonk/css/TypeContent.module.css
@@ -11,4 +11,5 @@
 }
 .TypeContent{
     box-shadow: 0 3px 8px rgba(0, 0, 0, 0.808);
+    text-align: left;
 }
